--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.0.1",
   "description": "A tree-sitter grammar for git's configuration language",
   "main": "bindings/node",
+  "types": "bindings/node",
   "scripts": {
     "test": "tree-sitter test",
     "format": "prettier --trailing-comma es5 --write grammar.js",
-    "format-check": "prettier --trailing-comma es5 --check grammar.js"
+    "format-check": "prettier --trailing-comma es5 --check grammar.js",
+    "install": "node-gyp-build",
+    "prebuildify": "prebuildify --napi --strip"
   },
   "repository": {
     "type": "git",
@@ -19,6 +22,14 @@
     "git",
     "config"
   ],
+  "files": [
+    "grammar.js",
+    "binding.gyp",
+    "prebuilds/**",
+    "bindings/node/*",
+    "queries/*",
+    "src/**"
+  ],
   "author": "the-mikedavis",
   "license": "MIT",
   "bugs": {
@@ -26,11 +37,21 @@
   },
   "homepage": "https://github.com/the-mikedavis/tree-sitter-git-config#readme",
   "dependencies": {
-    "nan": "^2.15.0"
+    "node-addon-api": "^7.1.0",
+    "node-gyp-build": "^4.8.0"
+  },
+  "peerDependencies": {
+    "tree-sitter": "^0.21.0"
+  },
+  "peerDependenciesMeta": {
+    "tree_sitter": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "prettier": "^2.5.1",
-    "tree-sitter-cli": "^0.20.1"
+    "tree-sitter-cli": "^0.20.1",
+    "prebuildify": "^6.0.0"
   },
   "tree-sitter": [
     {
